Added basic pane components to the layout

--- a/src/assets/styl/variables.styl
+++ b/src/assets/styl/variables.styl
@@ -1,18 +1,21 @@
 /* Colors */
-$color-green-dark   = #0d3300
-$color-green-medium = #688060
-$color-green-light  = #f2fcef
+$color-green-dark       = #0d3300
+$color-green-medium     = #688060
+$color-green-light      = #f2fcef
 
-$color-red-medium   = #cc3300
-$color-red-light    = #f9e5df
+$color-red-medium       = #cc3300
+$color-red-light        = #f9e5df
 
-$color-blue         = #0099cc
+$color-blue             = #0099cc
 
-$color-almost-white = #fafafa
-$color-grey-light   = #f2f2f2
-$color-grey         = #e4e4e4
+$color-almost-white     = #fafafa
+$color-grey-light       = #f2f2f2
+$color-grey             = #e4e4e4
 
 /* Fonts */
-$font-size--small   = 14px
-$font-size--base    = 16px
-$font-size--medium  = 20px
+$font-size--small       = 14px
+$font-size--base        = 16px
+$font-size--medium      = 20px
+
+/* Other */
+$component-border-width = 3px
