Added patient selector component

--- a/src/assets/styl/variables.styl
+++ b/src/assets/styl/variables.styl
@@ -11,8 +11,12 @@ $color-blue             = #0099cc
 $color-almost-white     = #fafafa
 $color-grey-light       = #f2f2f2
 $color-grey             = #e4e4e4
+$color-grey-dark        = #898989
+$color-grey-darker      = #797979
 
 /* Fonts */
+$font-family            = Arial, sans-serif
+$font-size--smaller     = 13px
 $font-size--small       = 14px
 $font-size--base        = 16px
 $font-size--medium      = 20px
