--- a/src/assets/styl/variables.styl
+++ b/src/assets/styl/variables.styl
@@ -13,9 +13,11 @@ $color-grey-light       = #f2f2f2
 $color-grey             = #e4e4e4
 $color-grey-dark        = #898989
 $color-grey-darker      = #797979
+$color-almost-black     = #333333
 
 /* Fonts */
 $font-family            = Arial, sans-serif
+$font-family--black     = Arial-Black, $font-family
 $font-size--smaller     = 13px
 $font-size--small       = 14px
 $font-size--base        = 16px
