Add problem list item component

--- a/src/assets/styl/variables.styl
+++ b/src/assets/styl/variables.styl
@@ -18,7 +18,9 @@ $color-almost-black     = #333333
 /* Fonts */
 $font-family            = Arial, sans-serif
 $font-family--black     = Arial-Black, $font-family
-$font-size--smaller     = 13px
+$font-size--xxxsmall    = 11px
+$font-size--xxsmall     = 12px
+$font-size--xsmall      = 13px
 $font-size--small       = 14px
 $font-size--base        = 16px
 $font-size--medium      = 20px
