Add attachment list component

--- a/src/assets/styl/mixins.styl
+++ b/src/assets/styl/mixins.styl
@@ -1,2 +1,5 @@
 base-border()
   border $component-border-width solid $color-green-dark
+
+selection-border()
+  border $selection-border-width solid $color-blue
