--- a/src/assets/styl/variables.styl
+++ b/src/assets/styl/variables.styl
@@ -1,7 +1,9 @@
 /* Colors */
 $color-green-dark       = #0d3300
+$color-green-darkish    = #2a4c20
 $color-green-medium     = #688060
-$color-green-light      = #f2fcef
+$color-green-light      = #f2fbef
+$color-green-lighter    = #f9fdf6
 
 $color-red-medium       = #cc3300
 $color-red-light        = #f9e5df
@@ -27,3 +29,4 @@ $font-size--medium      = 20px
 
 /* Other */
 $component-border-width = 3px
+$selection-border-width = 4px
