--- a/src/assets/styl/variables.styl
+++ b/src/assets/styl/variables.styl
@@ -18,8 +18,8 @@ $color-grey-darker      = #797979
 $color-almost-black     = #333333
 
 /* Fonts */
-$font-family            = Arial, sans-serif
-$font-family--black     = Arial-Black, $font-family
+$font-family            = Arimo, Arial, sans-serif
+$font-family--black     = Arial-Black, Arial, sans-serif
 $font-size--xxxsmall    = 11px
 $font-size--xxsmall     = 12px
 $font-size--xsmall      = 13px
