Fix issue with Arial Black font not working on Windows

--- a/src/assets/styl/variables.styl
+++ b/src/assets/styl/variables.styl
@@ -19,7 +19,7 @@ $color-almost-black     = #333333
 
 /* Fonts */
 $font-family            = Arimo, Arial, sans-serif
-$font-family--black     = Arial-Black, Arial, sans-serif
+$font-family--black     = "Arial Black", Arial, sans-serif
 $font-size--xxxsmall    = 11px
 $font-size--xxsmall     = 12px
 $font-size--xsmall      = 13px
