Display image attachments in a preview window on hover

--- a/src/assets/styl/variables.styl
+++ b/src/assets/styl/variables.styl
@@ -31,3 +31,6 @@ $font-size--medium      = 20px
 $navbar-height          = 50px
 $component-border-width = 3px
 $selection-border-width = 4px
+
+/* Z-indices */
+$z-attachment-preview   = 100
