Adjust warning icons based on feedback
Lower opacity of inactive icons to make active ones stand out better
Add space to separate the 'admitted' icon from the actual warning icons
Make 'admitted' icon green instead of red when active

--- a/src/assets/styl/variables.styl
+++ b/src/assets/styl/variables.styl
@@ -2,6 +2,7 @@
 $color-green-dark       = #0d3300
 $color-green-darkish    = #2a4c20
 $color-green-medium     = #688060
+$color-green-saturated  = #5f924f
 $color-green-light      = #f2fbef
 $color-green-lighter    = #f9fdf6
 
